fix Deck change ArrayList with ArrayDeque